syntax = "proto3";

package project.planton.provider.kubernetes.rediskubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/shared/kubernetes/kubernetes.proto";

//redis-kubernetes spec
message RedisKubernetesSpec {
  //redis-container spec
  RedisKubernetesContainer container = 1 [
    (buf.validate.field).required = true
  ];

  //redis-kubernetes ingress-spec
  project.planton.shared.kubernetes.IngressSpec ingress = 2;
}

// redis-kubernetes kubernetes redis-container spec
message RedisKubernetesContainer {
  //number of redis pods.
  //recommended default 1
  int32 replicas = 1 [
    (buf.validate.field).required = true
  ];

  //redis container cpu and memory resources.
  //recommended default "cpu-requests: 50m, memory-requests: 256Mi, cpu-limits: 1, memory-limits: 1Gi"
  project.planton.shared.kubernetes.ContainerResources resources = 2 [
    (buf.validate.field).required = true
  ];

  //flag to toggle persistence for redis data.
  //when enabled, redis in-memory data will be persisted to a storage volume.
  //the backup data from persistent volume is restored into redis memory between pod restarts.
  //defaults to false.
  bool is_persistence_enabled = 3;

  //size of persistent volume attached to each redis pod
  //if the client does not provide a value, the default value is configured.
  //this attribute is ignored when persistence is not enabled.
  //this persistent volume is used for backing up in-memory data.
  //data from the persistent volume will be restored into memory between pod restarts.
  //this value can not be modified as kubernetes does not allow updating the stateful-set specification after creation.
  string disk_size = 4;
}
